--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -260,7 +260,7 @@
                 </li>
             </ul>
         </nav>
-        <main role="main" class="body-img mx-xl-auto col-auto">
+        <main role="main" class="body-img mx-xl-auto col-6">
             <h1 class="title-css page-header">{% block main_title %}{% endblock %}</h1>
             <hr/>
             {% block body %}
