--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -43,6 +43,10 @@
                 $('#insert_header').focus();
                 return false;
             }
+            if ($('#manufactureDB0').val() == 0 || $('#manufactureDB0').val() == false){
+                alert("미 등록 수량을 벗어났습니다");
+                return false;
+            }
         });
         $('#startDate').change(function () {
             console.log("Start Date Click");
@@ -99,10 +103,6 @@
             });
         }
 
-        function f() {
-            
-        }
-        
 
         function getInsertModalValueFromManufactureDB() {
             var _week, _model = null;
@@ -114,14 +114,24 @@
             $(document).on("change", $('input[name=insert_week]'), function () {
                 _week = $('input[name=insert_week]').val();
                 console.log('Week is changed : ' + _week);
-                result[0] = _week;
+                if(_week){
+                    result[0] = _week;
+                }
+                else{
+                    document.getElementById("manufactureDB0").value = '';
+                }
             });
 
             $(document).on("change", $('select[name=insert_model]'), function () {
                 //_model = $('input[name=insert_model]').eq(0).val();
                 _model = $('#insert_model0').val();
                 console.log('Model is changed : ' + _model);
-                result[1] = _model;
+                if(_model){
+                    result[1] = _model;
+                }
+                else{
+                    document.getElementById("manufactureDB0").value = '';
+                }
             });
 
             $(document).on("change", result, function () {
@@ -138,8 +148,9 @@
                     })
                         .done(function (json) {
                             console.log("GetInsertModalValueFromManufactureDB Ajax Done : \n" + json);
-                            var test = $('input[name=manufactureDB]');
+                            var test = $('input[name=insert_manufactureDB]');
                             console.log(test)
+                            document.getElementById("manufactureDB0").value = json;
                         })
                         .fail(function (xhr, status, errorThrown) {
                             $(".modal-header").html("오류발생<br>")
@@ -279,7 +290,8 @@
                                 '<option>불량</option>' +
                                 '<option>반납</option>' +
                                 '<option>이동</option>' +
-                                '</select>')
+                                '</select>'),
+                            $('<th><textarea name="modify_text" rows="4" cols="40" value=' + json[i]['note'] + '></textarea>')
                         )
                     );
                 }
@@ -301,23 +313,28 @@
 {% block body_title %}Title{% endblock %}
 {% block main_title %}재고 관리{% endblock %}
 {% block body %}
+<!--<input hidden id="info_list" value="{# object.production_main_info_list() #}"/>-->
+<!--<input hidden id="model_list" value="{# object.production_main_model() #}"/>-->
+<!--<input hidden id="history_list" value="{# object.production_main_history() #}"/>-->
+<input hidden id="main_rows" value="{{ object.main_table_rows() }}"/>
+<input hidden id="specific_list" value="{{ specific_list }}"/>
 <!--<form class="form-inline" action="/search" method="POST">
 <form class="form-inline" action="/filtering2" method="POST">-->
 <form class="form-inline" action="/filtering" method="POST">
     <div class="row container-fluid">
-        <input type="date" id="startDate" name="startDate" value={{object.date()}} class="btn col-auto1 btn-primary">
+        <input type="date" id="startDate" name="startDate" value={{object.date()}} class="btn col-auto btn-primary">
         <input type="date" id="endDate" name="endDate" value={{object.date()}}
                class="btn col-auto1 btn-primary date_box">
         <input type="hidden" name="page" value="p_page"/>
         <!--<button type="submit" class="btn col-1 btn-warning">검색</button>-->
         <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
-        <select id="filter" name="filter" class="btn btn-secondary col-1" value="">
+        <select id="filter" name="filter" class="btn btn-secondary col-auto" value="">
             <option selected>전체</option>
             <option>모델</option>
             <option>위치</option>
             <option>상태</option>
         </select>
-        <select id="sub_filter" name="sub_filter" class="btn btn-secondary col-1" value="">
+        <select id="sub_filter" name="sub_filter" class="btn btn-secondary col-auto" value="">
             <!-- Dynamic creation -->
         </select>
         <button type="button" id="filter_btn" class="btn btn-secondary col-1">필터 적용</button>
@@ -325,45 +342,17 @@
                 data-target="#shipment_modal">상태 변경-->
         <button type="button" id="state_change_btn" class="btn btn-warning col-1">상태 변경</button>
         <button type="button" id="insert_btn" class="btn btn-warning col-1" data-toggle="modal"
-                data-target="#insert_modal"> 등록
-        </button>
+                data-target="#insert_modal"> 등록</button>
     </div>
     <!--</form>-->
     <hr/>
     <!--<form class="form-inline" action="/filtering2" method="POST">-->
     <input hidden id="sDate" name="sDate" value={{object.date()}}>
     <input hidden id="eDate" name="eDate" value={{object.date()}}>
-    <!--
-    <div>
-        <button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>
-        <button type="button" class="btn btn-secondary col-1" onclick="location.href='/'">전체</button>
-    </div>
-    <div>
-        <select id="model_filter" name="model_filter" class="btn btn-secondary col-1" value="">
-            <option hidden>모델</option>
-        </select>
-    </div>
-    <div>
-        <select id="location_filter" name="location_filter" class="btn btn-secondary col-1" value="">
-            <option hidden>위치</option>
-        </select>
-    </div>
-    <div>
-        <select id="state_filter" name="state_filter" class="btn btn-secondary col-1" value="">
-            <option hidden>상태</option>
-        </select>
-    </div>
-    -->
     <!--<a href="/insert_plan" class="btn btn-warning col-1 offset-6"
        onclick="winPop(this.href, {name:'insert_excel',width:1500,height:800}); return false;">생산계획입력 </a>-->
-    <!--<button type="submit" class="btn btn-secondary col-1">필터 적용</button>-->
 </form>
 <hr/>
-<!--<input hidden id="info_list" value="{# object.production_main_info_list() #}"/>-->
-<!--<input hidden id="model_list" value="{# object.production_main_model() #}"/>-->
-<!--<input hidden id="history_list" value="{# object.production_main_history() #}"/>-->
-<input hidden id="main_rows" value="{{ object.main_table_rows() }}"/>
-<input hidden id="specific_list" value="{{ specific_list }}"/>
 <table class="table table-striped table-bordered table-sm text-center tablesorter" id="main_table">
     <thead class="header-sort thead-dark">
     <tr>
@@ -388,8 +377,8 @@
     </nav>
 </div>
 <hr>
-<div class="col-lg-12" id="ex3_Result1"></div>
-<div class="col-lg-12" id="ex3_Result2"></div>
+<!--<div class="col-lg-12" id="ex3_Result1"></div>-->
+<!--<div class="col-lg-12" id="ex3_Result2"></div>-->
 <!-- Test Part -->
 
 <!-- The Product Insert Modal -->
@@ -422,8 +411,8 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
-                    <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary">행 추가하기</button>
-                    <button type="button" id='btn-delete-row' class="btn btn-secondary">행 삭제하기</button>
+                    <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary" disabled>행 추가하기</button>
+                    <button type="button" id='btn-delete-row' class="btn btn-secondary" disabled>행 삭제하기</button>
                     <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인</button>
                     <button type="button" class="btn btn-warning" data-dismiss="modal">취 소</button>
                 </div>
@@ -492,7 +481,8 @@
                             <th>날짜</th>
                             <th>위치</th>
                             <th>상태</th>
-                            <th>비고(사유)</th>
+                            <th>사유</th>
+                            <th>비고</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -537,7 +527,8 @@
                                 <th size="10">날짜</th>
                                 <th size="7">위치</th>
                                 <th size="7">상태</th>
-                                <th>비고(사유)</th>
+                                <th>사유</th>
+                                <th size="30">비고</th>
                             </tr>
                             </thead>
                             <tbody>
