--- a/FlaskServer/templates/menu.html
+++ b/FlaskServer/templates/menu.html
@@ -30,13 +30,13 @@
     </div>
     <div style="float: left; width: 50%">
         <form action="/sales_main" method="GET">
-            <button style="height: 180px" class="btn" type="submit" value="">
+            <button style="height: 180px" class="btn" type="submit" value="" disabled>
         <i class="fas fa-user" aria-hidden="true"></i> 영업 관리 화면</button>
         </form>
     </div>
     <div style="float: right; clear: right; width: 50%">
         <form action="/statistics_main" method="GET">
-            <button style="height: 180px" class="btn" type="submit" value="">
+            <button style="height: 180px" class="btn" type="submit" value="" disabled>
         <i class="fas fa-user" aria-hidden="true"></i> 통계 화면</button>
         </form>
     </div>
