--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -93,7 +93,7 @@
                         pagination_test_ver('production_main', 20, json)
                     })
                     .fail(function (xhr, status, errorThrown) {
-                        $("#filter_btn").html("오류발생<br>")
+                        $("#error_text").html("오류발생<br>")
                             .append("오류명 : " + errorThrown + "<br>")
                             .append("상태 : " + status);
                     })
@@ -118,7 +118,7 @@
                     result[0] = _week;
                 }
                 else{
-                    document.getElementById("manufactureDB0").value = '';
+                        //document.getElementById("manufactureDB0").value = ' ';
                 }
             });
 
@@ -130,7 +130,7 @@
                     result[1] = _model;
                 }
                 else{
-                    document.getElementById("manufactureDB0").value = '';
+                    //document.getElementById("manufactureDB0").value = ' ';
                 }
             });
 
@@ -153,7 +153,7 @@
                             document.getElementById("manufactureDB0").value = json;
                         })
                         .fail(function (xhr, status, errorThrown) {
-                            $(".modal-header").html("오류발생<br>")
+                            $(".error_text").html("오류발생<br>")
                                 .append("오류명 : " + errorThrown + "<br>")
                                 .append("상태 : " + status);
                         })
@@ -268,6 +268,9 @@
                     )
                 );
                 for (var i = 1; i < json.length; i++) {
+                    if(!json[i]['note']){
+                        json[i]['note'] = '';
+                    }
                     $('#detail_modification_table').append(
                         $('<tr>').append(
                             $('<th size="10" class="text-center"><input type="text" name="modify_date" value=' + json[i]['date'] + '>'),
@@ -291,7 +294,7 @@
                                 '<option>반납</option>' +
                                 '<option>이동</option>' +
                                 '</select>'),
-                            $('<th><textarea name="modify_text" rows="4" cols="40" value=' + json[i]['note'] + '></textarea>')
+                            $('<th><textarea name="modify_text" rows="4" cols="40" value=' + json[i]['note'] + '>'+ json[i]['note'] +'</textarea>')
                         )
                     );
                 }
