2019-03-11 Updated Feeback( added filter )

--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -2,7 +2,7 @@
 {% block head %}
 <script>
     $(document).ready(function () {
-        pagination_test('manufacture', 10);
+        pagination_for_init('manufacture', 10);
         add_and_delete_row_btn('manufacture');
 
         $('#insert_btn').click(function () {
