--- a/FlaskServer/templates/sales_main.html
+++ b/FlaskServer/templates/sales_main.html
@@ -95,7 +95,7 @@
     }
 
     $(document).ready(function () {
-        pagination_test('sales_main', 5);
+        pagination_for_init('sales_main', 5);
         register_of_partner();
         register_of_order();
         register_of_pn();
