--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -25,7 +25,7 @@
         detected_change_value_event();
         checked_dateBox();
         filter_add_btn_click_event();
-
+        select_date_btn_event()
     });
 
     function insert_btn_click_event() {
@@ -139,9 +139,10 @@
                     });
             } else {
                 var second_filter = $('#second_filter').val();
-                var second_sub_filter = $('second_sub_filter').val();
+                var second_sub_filter = $('#second_sub_filter').val();
 
-                console.log("sDate : " + startDate + " eDate : " + endDate + " filter : " + filter + " sFilter : " + sub_filter);
+                console.log("sDate : " + startDate + " eDate : " + endDate + " filter : " + filter + " sFilter : " + sub_filter
+                + "second_filter : " + second_filter + " second_sub_filter : " + second_sub_filter);
                 $.ajax({
                     url: "/filtering2",
                     data: {
@@ -177,13 +178,15 @@
     function getInsertModalValueFromManufactureDB() {
         var _week, _model = null;
         var result = new Array();
-        $(document).on("change", '#row_count', function () {
+        /*$(document).on("change", '#row_count', function () {
             console.log("Count : " + $('#row_count').val());
-        });
+        });*/
 
         $(document).on("change", 'input[name=insert_week]', function () {
+            var trCount = $('#insert_table > tbody > tr').size();
+            console.log("TRC : " + trCount);
             _week = $('input[name=insert_week]').val();
-            console.log('Week is changed : ' + _week);
+            console.log('Week is changed : ' + _week + ' (' + trCount + ')');
             if (_week) {
                 result[0] = _week;
             } else {
@@ -192,9 +195,11 @@
         });
 
         $(document).on("change", 'select[name=insert_model]', function () {
+            var trCount = $('#insert_table > tbody > tr').size();
+            console.log("TRC : " + trCount);
             //_model = $('input[name=insert_model]').eq(0).val();
             _model = $('#insert_model0').val();
-            console.log('Model is changed : ' + _model);
+            console.log('Model is changed : ' + _model + ' (' + trCount + ')');
             if (_model) {
                 result[1] = _model;
             } else {
@@ -456,6 +461,34 @@
         });
     }
 
+    function select_date_btn_event(){
+        $('#select_year_btn').on('click', function () {
+            var date = new Date();
+            var day = date.getDate();
+            var year = date.getFullYear()-1;
+            var month = date.getMonth() + 1;
+            month = month.toString();
+            if (month.length === 1){
+                month = '0'+month;
+            }
+            var time = year + '-' + month + '-' + day;
+            console.log(time);
+            document.getElementById("startDate").value = time;
+        });
+        $('#select_month_btn').on('click', function () {
+            var date = new Date();
+            var day = date.getDate();
+            var year = date.getFullYear();
+            var month = date.getMonth().toString();
+            if (month.length === 1){
+                month = '0'+month;
+            }
+            var time = year + '-' + month + '-' + day;
+            console.log(time);
+            document.getElementById("startDate").value = time;
+        });
+    }
+
     $(document).on('click', '#delete_second_filter', function () {
         console.log("DELETE");
         $('#filter_add_space').empty();
@@ -480,18 +513,13 @@
     <input type="date" id="endDate" name="endDate" value={{object.date()}}
            class="btn col-auto1 btn-primary date_box">
     <input type="hidden" name="page" value="p_page"/>
+    <button type="button" id="select_year_btn" class="btn btn-primary offset-1 col-1">1년 전</button>
+    <button type="button" id="select_month_btn" class="btn btn-primary col-1">한달 전</button>
     <!--<button type="submit" class="btn col-1 btn-warning">검색</button>-->
     <!--<button type="button" class="btn btn-primary col-1" onclick="location.href='/all_collection'">전체</button>-->
 
     <!--<button type="button" id="state_change_btn" class="btn btn-warning col-1" data-toggle="modal"
             data-target="#shipment_modal">상태 변경-->
-    <button type="button" id="state_change_btn" class="btn btn-warning offset-1 col-2">상태 변경</button>
-    <button type="button" id="insert_btn" class="btn btn-warning col-1" data-toggle="modal"
-            data-target="#insert_modal"> 등록
-    </button>
-</div>
-<div id="filter_add_space" class="row container-fluid">
-
 </div>
 <div class="row container-fluid">
     <select id="filter" name="filter" class="btn btn-secondary  col-auto" value="">
@@ -505,9 +533,15 @@
     </select>
     <button type="button" id="filter_btn" class="btn btn-secondary col-auto">필터 적용</button>
     <button type="button" id="filter_add_btn" class="btn btn-secondary col-auto">필터 추가</button>
+    <button type="button" id="state_change_btn" class="btn btn-warning offset-1 col-2">상태 변경</button>
+    <button type="button" id="insert_btn" class="btn btn-warning col-1" data-toggle="modal"
+            data-target="#insert_modal"> 등록
+    </button>
+</div>
+<div id="filter_add_space" class="row container-fluid">
+    <!-- Dynamic Second Filter -->
 </div>
 <!--</form>-->
-<hr/>
 <!--<form class="form-inline" action="/filtering2" method="POST">-->
 <!--<input hidden id="sDate" name="sDate" value={{object.date()}}>-->
 <!--<input hidden id="eDate" name="eDate" value={{object.date()}}>-->
@@ -573,8 +607,8 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
-                    <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary" disabled>행 추가하기</button>
-                    <button type="button" id='btn-delete-row' class="btn btn-secondary" disabled>행 삭제하기</button>
+                    <button type="button" id='btn-add-row' class="btn offset-4 btn-secondary" >행 추가하기</button>
+                    <button type="button" id='btn-delete-row' class="btn btn-secondary" >행 삭제하기</button>
                     <button type="submit" id="insert_submit_btn" class="btn btn-warning">확 인</button>
                     <button type="button" class="btn btn-warning" data-dismiss="modal">취 소</button>
                 </div>
@@ -701,8 +735,8 @@
                 </div>
                 <!-- Modal Footer -->
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-warning">수 정
-                    </button>
+                    <button type="submit" class="btn btn-warning">수 정</button>
+                    <button type="button" class="btn btn-warning" data-dismiss="modal">취 소</button>
                 </div>
             </div>
         </form>
