--- a/FlaskServer/templates/manufacture.html
+++ b/FlaskServer/templates/manufacture.html
@@ -38,9 +38,7 @@
 <input hidden id="specific_list" value="{{ specific_list }}"/>
 <div class="row container-fluid">
     <button type="button" id="insert_btn" class="btn btn-warning col-2 offset-9" data-toggle="modal"
-            data-target="#insert_modal">
-        등록
-    </button>
+            data-target="#insert_modal">등록</button>
 </div>
 <hr/>
 <table class="table table-bordered table-striped table-sm text-center tablesorter" id="main_table">
@@ -50,8 +48,8 @@
         <th>주차</th>
         <th>모델</th>
         <th>생산수량</th>
-        <th>Aging</th>
-        <th>완료</th>
+        <th>남은 수량</th>
+        <th>재고 등록 완료</th>
         <th>등록일</th>
         <th>버튼</th>
     </tr>
