--- a/FlaskServer/templates/main_base.html
+++ b/FlaskServer/templates/main_base.html
@@ -221,6 +221,12 @@
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/chartTable_main">
+                        ???
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
                 <li class="nav-item" hidden>
                     <a class="nav-link" href="/sales_main">
                         영업 관리
