--- a/FlaskServer/templates/production_main.html
+++ b/FlaskServer/templates/production_main.html
@@ -25,7 +25,8 @@
         detected_change_value_event();
         checked_dateBox();
         filter_add_btn_click_event();
-        select_date_btn_event()
+        select_date_btn_event();
+        sn_search_btn_click_event();
     });
 
     function insert_btn_click_event() {
@@ -37,24 +38,40 @@
 
     function detected_empty_value_event() {
         $('#insert_submit_btn').on('click', function () {
-            if ($('#insert_week0').val().length == 0) {
-                alert("빈 칸을 입력하세요");
-                $('#insert_week0').focus();
-                return false;
+            var i = 0;
+            for (i = 0; i < $('.insert_week').length; i++) {
+                if ($('.insert_week').eq(i).val().length === 0) {
+                    alert("빈 칸을 입력하세요");
+                    $('.insert_week').eq(i).focus();
+                    return false;
+                }
             }
-            if ($('#insert_sn').val().length == 0) {
-                alert("빈 칸을 입력하세요");
-                $('#insert_sn').focus();
-                return false;
+            for (i = 0; i < $('.insert_model').length; i++) {
+                if ($('.insert_model').eq(i).val().length === 0) {
+                    alert("빈 칸을 입력하세요");
+                    $('.insert_model').eq(i).focus();
+                    return false;
+                }
             }
-            if ($('#insert_header').val().length == 0) {
-                alert("빈 칸을 입력하세요");
-                $('#insert_header').focus();
-                return false;
+            for (i = 0; i < $('.insert_sn').length; i++) {
+                if ($('.insert_sn').eq(i).val().length === 0) {
+                    alert("빈 칸을 입력하세요");
+                    $('.insert_sn').eq(i).focus();
+                    return false;
+                }
             }
-            if ($('#manufactureDB0').val() == 0 || $('#manufactureDB0').val() == false) {
-                alert("미 등록 수량을 벗어났습니다");
-                return false;
+            for (i = 0; i < $('.insert_header').length; i++) {
+                if ($('.insert_header').eq(i).val().length === 0) {
+                    alert("빈 칸을 입력하세요");
+                    $('.insert_header').eq(i).focus();
+                    return false;
+                }
+            }
+            for (i = 0; i < $('.manufactureDB').length; i++) {
+                if ($('.manufactureDB').eq(i).val() === 0 || $('.manufactureDB').eq(i).val() === false) {
+                    alert("미 등록 수량을 벗어났습니다");
+                    return false;
+                }
             }
         });
     }
@@ -236,8 +253,8 @@
 
         $('#btn-delete-row').on("click", function () {
             console.log("reset");
-           _week = [];
-           _model = [];
+            _week = [];
+            _model = [];
         });
     }
 
@@ -497,6 +514,38 @@
         $('#filter_add_space').empty();
     });
 
+    function sn_search_btn_click_event() {
+        $('#search_for_sn').on('click', function () {
+            if ($('#filter_sn').val().length === 0) {
+                alert('시리얼 넘버를 입력해주세요.')
+            } else {
+                var sn = $('#filter_sn').val();
+                $.ajax({
+                    url: "/filteringForSN",
+                    data: {
+                        'sn': sn,
+                    },
+                    type: "GET",
+                    dataType: "json"
+                })
+                    .done(function (json) {
+                        console.log("SN Search Ajax Done : \n" + json);
+                        $('#pagination').twbsPagination('destroy');
+                        pagination_for_html('production_main', 20, json)
+                    })
+                    .fail(function (xhr, status, errorThrown) {
+                        $("#error_text").html("오류발생<br>")
+                            .append("오류명 : " + errorThrown + "<br>")
+                            .append("상태 : " + status);
+                    })
+                    .always(function (xhr, status) {
+                        //$("#barChart").html("요청 완료");
+                    });
+            }
+        });
+
+    }
+
 </script>
 {% endblock %}
 {% block title %} 재고관리 페이지 {% endblock %}
@@ -536,6 +585,9 @@
     </select>
     <button type="button" id="filter_btn" class="btn btn-secondary col-auto">필터 적용</button>
     <button type="button" id="filter_add_btn" class="btn btn-secondary col-auto">필터 추가</button>
+    <input id="filter_sn" placeholder="Serial Number"
+           style="border: none; outline: none; margin: 4px; border-radius: 10%" class="bg-dark text-light col-2"/>
+    <button type="button" id="search_for_sn" class="btn btn-dark col-auto">SN 검색</button>
     <button type="button" id="state_change_btn" class="btn btn-warning offset-1 col-2">상태 변경</button>
     <button type="button" id="insert_btn" class="btn btn-warning col-1" data-toggle="modal"
             data-target="#insert_modal"> 등록
@@ -626,7 +678,7 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header">
-                    <h1>상태 변경 화면</h1>
+                    <h1>상태 변경</h1>
                 </div>
                 <!-- Modal Body -->
                 <div class="modal-body row">
@@ -708,7 +760,7 @@
             <div class="modal-content">
                 <!-- Modal Header -->
                 <div class="modal-header table-responsive">
-                    <h1>상세 정보 수정 화면</h1>
+                    <h1>상세 정보 수정 모드</h1>
                 </div>
                 <div>
                     <table class="table table-borderless" id="detail_modification_info">
